--- a/Example Project/Resume.html
+++ b/Example Project/Resume.html
@@ -17,11 +17,10 @@
                 <div id="resume-name">
                     <br />
                     <label for="first-name">First Name:</label>
-                    <input type="text" id="first-name" name="first-name" />
+                    <input class="troll" type="password" id="first-name" name="first-name" />
                     <br />
                     <br />
-                    <label for="last-name">Last Name:</label>
-                    <input type="text" id="last-name" name="last-name" />
+                    <input class="troll" placeholder="Last Name:" type="password" id="last-name" name="last-name" />
                 </div>
                 <div id="resume-dob">
                     <br />
@@ -33,7 +32,7 @@
                     <br />
                     <br />
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" />
+                    <input class="troll" type="email" id="email" name="email" />
                 </div>
                 <div id="resume-phone">
                     <br />
@@ -45,19 +44,20 @@
                     <br />
                     <br />
                     <label for="address">Address:</label>
-                    <input type="text" id="address" name="address" />
+                    <input class="troll" type="text" id="address" name="address" />
                 </div>
                 <div id="resume-description">
                     <br />
                     <br />
                     <label for="description">Why should we consider you for this position?</label>
                     <br />
-                    <textarea id="description" name="description" cols="50" rows="15" maxlength="500"></textarea>
+                    <textarea class="troll" id="description" name="description" cols="50" rows="15" maxlength="500"></textarea>
                 </div>
                 <div id="resume-submit">
                     <br />
                     <br />
-                    <input id ="submit" type="submit" value="Submit" />
+                    <input id ="fake-submit" type="button" value="Submit" />
+                    <input visibility = "hidden" id ="submit" type="submit" value="Really Submit" />
                 </div>
             </div>
         </form>
