Added old phone text enter system

--- a/Example Project/Resume.html
+++ b/Example Project/Resume.html
@@ -62,6 +62,69 @@
             </div>
         </form>
 
+        <div id="phonepad">
+                <div class="phonepad-item" id="1">
+                    01
+                    <br />
+                    ABC
+                    <br />
+                    <button class="phonepad-button" id="b1"></button>
+                </div>
+                <div class="phonepad-item" id="2">
+                    2
+                    <br />
+                    DEF
+                    <br />
+                    <button class="phonepad-button" id="b2"></button>
+                </div>
+                <div class="phonepad-item" id="3">
+                    3
+                    <br />
+                    GHI
+                    <br />
+                    <button class="phonepad-button" id="b3"></button>
+                </div>
+                <div class="phonepad-item" id="4">
+                    4
+                    <br />
+                    JKL
+                    <br />
+                    <button class="phonepad-button" id="b4"></button>
+                </div>
+                <div class="phonepad-item" id="5">
+                    5
+                    <br />
+                    MNO
+                    <br />
+                    <button class="phonepad-button" id="b5"></button>
+                </div>
+                <div class="phonepad-item" id="6">
+                    6
+                    <br />
+                    PQR
+                    <br />
+                    <button class="phonepad-button" id="b6"></button>
+                </div>
+                <div class="phonepad-item" id="7">
+                    7
+                    <br />
+                    STUV
+                    <br />
+                    <button class="phonepad-button" id="b7"></button>
+                </div>
+                <div class="phonepad-item" id="8">
+                    89
+                    <br />
+                    WXYZ
+                    <br />
+                    <button class="phonepad-button" id="b8"></button>
+                </div>
+                <div class="phonepad-item" id="9">
+                    Enter
+                    <button class="phonepad-button" id="b9"></button>
+                </div>
+        </div>
+
         <script src="Resume.js"></script>
     </body>
 </html>
